WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261495
[ Ventura+ wk1 ] editing/spelling/retro-correction-spelling-markers.html is a constant failure.
https://bugs.webkit.org/show_bug.cgi?id=261495
Summary
[ Ventura+ wk1 ] editing/spelling/retro-correction-spelling-markers.html is a...
Ben Schwartz
Reported
2023-09-12 23:15:57 PDT
editing/spelling/retro-correction-spelling-markers.html This test is a constant failure on macOS Ventura and above, wk1. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=editing%2Fspelling%2Fretro-correction-spelling-markers.html&recent=false&version_name=Ventura
TEXT DIFF: PASS internals.hasSpellingMarker(5, 4) became true -PASS !internals.sentenceRetroCorrectionEnabled || internals.hasSpellingMarker(10, 2) is true -PASS !internals.sentenceRetroCorrectionEnabled || internals.hasSpellingMarker(18, 3) is true +FAIL !internals.sentenceRetroCorrectionEnabled || internals.hasSpellingMarker(10, 2) should be true. Was false. +FAIL !internals.sentenceRetroCorrectionEnabled || internals.hasSpellingMarker(18, 3) should be true. Was false. PASS successfullyParsed is true TEST COMPLETE DIFF URL:
https://build.webkit.org/results/Apple-Ventura-Release-AppleSilicon-WK1-Tests/267928@main%20(5188)/editing/spelling/retro-correction-spelling-markers-diff.txt
REPRODUCIBILITY: I was able to reproduce this issue on macOS Ventura (13.5, 22G74/arm64) ToT using the following command: run-webkit-tests -1 --verbose --clobber-old-results editing/spelling/retro-correction-spelling-markers.html REGRESSION: I was unable to bisect a regression point due to this issue persisting past the flakiness dashboard history.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-12 23:16:07 PDT
<
rdar://problem/115411037
>
Wenson Hsieh
Comment 2
2023-09-20 10:02:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17977
EWS
Comment 3
2023-09-20 16:31:03 PDT
Committed
268222@main
(d4d733cacadd): <
https://commits.webkit.org/268222@main
> Reviewed commits have been landed. Closing PR #17977 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug