[ Ventura+ wk1 ] editing/spelling/retro-correction-spelling-markers.html is a constant failure. https://bugs.webkit.org/show_bug.cgi?id=261495 rdar://115411037

Reviewed by Aditya Keerthi and Abrar Rahman Protyasha.

Make this test more robust against underlying changes to spell checking on macOS, by ensuring
consistent text checking results via `LayoutTestSpellChecker`.

* LayoutTests/editing/spelling/retro-correction-spelling-markers.html:
* LayoutTests/platform/mac-wk1/TestExpectations:
* LayoutTests/resources/ui-helper.js:

Ensure that this helper function doesn't trigger a crash on non-Cocoa ports by bailing gracefully in
the case where we're neither macOS nor iOS.

(window.UIHelper.async setSpellCheckerResults):
* Tools/DumpRenderTree/TestRunner.cpp:
(isMacCallback):
(TestRunner::staticFunctions):

Implement `TestRunner.isMac` so that the above check in `ui-helper.js` works as intended.

Canonical link: https://commits.webkit.org/268222@main